--- a/src/styles/VoteEvent.scss
+++ b/src/styles/VoteEvent.scss
@@ -1,5 +1,5 @@
 /* ============================================================
-   ▶ 공통 스타일
+   ▶ VoteEvent 전역 스타일
 ============================================================ */
 
 /* -------------------- Common Section -------------------- */
