--- a/src/styles/SearchResult.scss
+++ b/src/styles/SearchResult.scss
@@ -1,163 +1,180 @@
-.result-section{
-    min-height: calc(100vh - 548px);
-    .no-result-txt{
-        font-weight: 700;
-        font-size: clamp(16px, 2vw, 20px);
-        line-height: clamp(24px, 3vw, 30px);
+.result-loading {
+  width: 100%;
+  height: 100%;
+  min-height: calc(100vh - 548px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.result-section {
+  min-height: calc(100vh - 548px);
+  .no-result-txt {
+    font-weight: 700;
+    font-size: clamp(16px, 2vw, 20px);
+    line-height: clamp(24px, 3vw, 30px);
+  }
+  .result-list {
+    &__music {
+      display: flex;
+      flex-wrap: wrap;
+      column-gap: 2%;
+      row-gap: 20px;
+      .album__content-list__list__item {
+        flex: 0 0 18.4%;
+        @media screen and (max-width: 1920px) {
+          flex: 0 0 23.5%;
+          max-width: 23.5%;
+        }
+        @media screen and (max-width: 1400px) {
+          flex: 0 0 31.3%;
+          max-width: 31.3%;
+        }
+        @media screen and (max-width: 1200px) {
+          flex: 0 0 49%;
+          max-width: 49%;
+        }
+        @media screen and (max-width: 768px) {
+          flex: 0 0 100%;
+          max-width: 100%;
+        }
+      }
+      .album__content-list__list__item__right__user__btn {
+        max-width: 160px;
+      }
     }
-    .result-list{
-        &__music{
-            display: flex;
-            flex-wrap: wrap;
-            column-gap: 2%;
-            row-gap: 20px;
-            .album__content-list__list__item{
-                flex: 0 0 18.4%;
-                @media screen and (max-width: 1920px) {
-                    flex: 0 0 23.5%;
-                    max-width: 23.5%;
-                }
-                @media screen and (max-width: 1400px) {
-                    flex: 0 0 31.3%;
-                    max-width: 31.3%;
-                }
-                @media screen and (max-width: 1200px) {
-                    flex: 0 0 49%;
-                    max-width: 49%;
-                }
-                @media screen and (max-width: 768px) {
-                    flex: 0 0 100%; 
-                    max-width: 100%;
-                }
-            }
-            .album__content-list__list__item__right__user__btn{
-                max-width: 160px;
-            }
+    &__artist {
+      .artist-list {
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 2%;
+        row-gap: clamp(24px, 1.5vw, 40px);
+        padding-bottom: 20px;
+      }
+      .artist-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 16px;
+        flex: 0 0 auto;
+        @media screen and (max-width: 1400px) {
+          flex: 0 0 15%;
+          max-width: 15%;
         }
-        &__artist{
-            .artist-list{
-                display: flex;
-                flex-wrap: wrap;
-                column-gap: 2%;
-                row-gap: clamp(24px, 1.5vw, 40px);
-                padding-bottom: 20px;
-            }
-            .artist-item{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 16px;
-                flex: 0 0 auto;
-                @media screen and (max-width: 1400px) {
-                    flex: 0 0 15%;
-                    max-width: 15%; 
-                }
 
-                @media screen and (max-width: 1024px) {
-                    flex: 0 0 23.5%;
-                    max-width: 23.5%;
-                }
-
-                @media screen and (max-width: 768px) {
-                    flex: 0 0 32%;
-                    max-width: 32%;
-                }
-
-                @media screen and (max-width: 480px) {
-                    flex: 0 0 49%;
-                    max-width: 49%;
-                }
-            }
-            .artist-thumb{
-                border-radius: 100%;
-                img{
-                    width: 100%;
-                    max-width: 160px;
-                    object-fit: cover;
-                }
-            }
-            .artist-info{
-                display: flex;
-                flex-direction: column;
-                row-gap: 12px;
-                .artist-name{
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    column-gap: 12px;
-                    color: #fff;
-                    font-weight: 400;
-                    font-size: clamp(14px, 1vw, 16px);
-                    line-height: clamp(22px, 1.3vw, 24px);
-                    span{
-                        max-width: 130px;
-                        white-space: nowrap;
-                        overflow: hidden;
-                        text-overflow: ellipsis;
-                    }
-                    img{
-                        width: 100%;
-                        max-width: 20px;
-                    }
-                }
-                .artist-meta{
-                    display: flex;
-                    justify-content: space-around;
-                    text-align: center;
-                    span{
-                        color: #767676;
-                        font-size: 12px;
-                        line-height: 18px;
-                    }
-                    small{
-                        display: block;
-                        padding-top: 3px;
-                        color: #bbb;
-                        font-size: 14px;
-                        line-height: 22px;   
-                    }
-                }
-            }
+        @media screen and (max-width: 1024px) {
+          flex: 0 0 23.5%;
+          max-width: 23.5%;
         }
-        &__album{
-            display: flex;
-            flex-wrap: wrap;
-            row-gap: 20px;
-            .album-card{
-                flex: 0 0 23.5%;
-                max-width: 23.5%;
-                @media screen and (max-width: 1400px) {
-                    flex: 0 0 32%;
-                    max-width: 32%;
-                }
 
-                @media screen and (max-width: 768px) {
-                    flex: 0 0 49%;
-                    max-width: 49%;
-                }
-
-                @media screen and (max-width: 480px) {
-                    flex: 0 0 100%;
-                    max-width: 100%;
-                }
-            }
-        
-            .album-collections-module-items__info h1{
-                max-width: 100%;
-                min-width: 0;
-                flex: 0 1 auto;
-            }
+        @media screen and (max-width: 768px) {
+          flex: 0 0 32%;
+          max-width: 32%;
         }
+
+        @media screen and (max-width: 480px) {
+          flex: 0 0 49%;
+          max-width: 49%;
+        }
+      }
+      .artist-thumb {
+        border-radius: 50%;
+        aspect-ratio: 1;
+        width: 100%;
+        max-width: clamp(100px, 11vw, 160px);
+
+        a {
+          display: block;
+        }
+        img {
+          width: 100%;
+          max-width: 160px;
+          object-fit: cover;
+          border-radius: 50%;
+        }
+      }
+      .artist-info {
+        display: flex;
+        flex-direction: column;
+        row-gap: 12px;
+        .artist-name {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          column-gap: 12px;
+          color: #fff;
+          font-weight: 400;
+          font-size: clamp(14px, 1vw, 16px);
+          line-height: clamp(22px, 1.3vw, 24px);
+          span {
+            max-width: 130px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+          img {
+            width: 100%;
+            max-width: 20px;
+          }
+        }
+        .artist-meta {
+          display: flex;
+          justify-content: space-around;
+          text-align: center;
+          span {
+            color: #767676;
+            font-size: 12px;
+            line-height: 18px;
+          }
+          small {
+            display: block;
+            padding-top: 3px;
+            color: #bbb;
+            font-size: 14px;
+            line-height: 22px;
+          }
+        }
+      }
     }
+    &__album {
+      display: flex;
+      flex-wrap: wrap;
+      row-gap: 20px;
+      .album-card {
+        flex: 0 0 23.5%;
+        max-width: 23.5%;
+        @media screen and (max-width: 1400px) {
+          flex: 0 0 32%;
+          max-width: 32%;
+        }
+
+        @media screen and (max-width: 768px) {
+          flex: 0 0 49%;
+          max-width: 49%;
+        }
+
+        @media screen and (max-width: 480px) {
+          flex: 0 0 100%;
+          max-width: 100%;
+        }
+      }
+
+      .album-collections-module-items__info h1 {
+        max-width: 100%;
+        min-width: 0;
+        flex: 0 1 auto;
+      }
+    }
+  }
 }
 
 // 탭 스타일 START
-.tab__nav{
-    display: flex;
-    margin: 40px auto;
-    gap: 12px;
+.tab__nav {
+  display: flex;
+  margin: 40px auto;
+  gap: 12px;
 
-    .tab__nav-item {
+  .tab__nav-item {
     display: flex;
     padding: 8px 16px;
     justify-content: center;
@@ -174,19 +191,19 @@
     font-weight: 700;
     &:hover,
     &.active {
-        color: #1a1a1a;
-        background-color: #cf0;
+      color: #1a1a1a;
+      background-color: #cf0;
     }
     font {
-        font-family: inherit !important;
-        font-size: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-        font-style: inherit !important;
-        color: inherit !important;
-        letter-spacing: inherit !important;
+      font-family: inherit !important;
+      font-size: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+      font-style: inherit !important;
+      color: inherit !important;
+      letter-spacing: inherit !important;
     }
-    }
+  }
 } // 탭 스타일 END
 
 // artist-slider START
