--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -79,6 +79,11 @@
       bottom: -35px;
     }
   }
+  &__link{
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
   &__picture{
     display: block;
     height: 100%;
@@ -89,6 +94,7 @@
     width: 100%;
     height: 100%;
     display: block;
+    object-position: center center;
   }
 } // banner-swiper END
 
