--- a/src/styles/SearchResult.scss
+++ b/src/styles/SearchResult.scss
@@ -79,16 +79,26 @@
             }
             .artist-thumb{
                 border-radius: 100%;
+                overflow: hidden;
+                aspect-ratio: 1 / 1;
+                a{
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                }
                 img{
                     width: 100%;
                     max-width: 160px;
+                    height: 100%;
                     object-fit: cover;
+                    object-position: center center;
                 }
             }
             .artist-info{
                 display: flex;
                 flex-direction: column;
                 row-gap: 12px;
+                width: 100%;
                 .artist-name{
                     display: flex;
                     justify-content: center;
