izzy : SuccessModal X button props 추가

--- a/src/components/unit/VoteItem.scss
+++ b/src/components/unit/VoteItem.scss
@@ -102,7 +102,7 @@
             color: #CF0;
             border: 1px solid #CF0;
         }
-        &--sucess{
+        &--success{
             color: #767676;
             border: 1px solid rgba(204, 255, 0, 0.3);
             pointer-events: none;
