izzy : 투표 페이지 모달 연결 완료

--- a/src/components/modal/ConfirmModal.scss
+++ b/src/components/modal/ConfirmModal.scss
@@ -10,6 +10,10 @@
     word-break: keep-all;
     font-family: Pretendard400;
     color: #aaa;
+    
+    .vote-txt{
+      padding-top: 20px;
+    }
   }
   .confirm-modal__button-container {
     display: flex;
