--- a/src/components/ModalWrap.scss
+++ b/src/components/ModalWrap.scss
@@ -11,6 +11,7 @@
   justify-content: center;
 
   .modal-content-box {
+    padding: 10px 0;
     max-width: 400px;
     width: 100%;
     background-color: #222;
@@ -19,7 +20,7 @@
     background: #1a1a1a;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.4);
     .modal-header {
-      padding: 17px;
+      padding: 20px;
       text-align: center;
       position: relative;
     }
