--- a/src/styles/VoteList.scss
+++ b/src/styles/VoteList.scss
@@ -11,6 +11,7 @@
         column-gap: 2%;
         row-gap: clamp(24px, 2vw, 30px);
         flex-wrap: wrap;
+        padding-bottom: 20px;
         .vote-list__item{
             flex: 0 0 auto;
             max-width: 289px;
