--- a/src/styles/SearchResult.scss
+++ b/src/styles/SearchResult.scss
@@ -79,18 +79,21 @@
       }
       .artist-thumb {
         border-radius: 50%;
-        aspect-ratio: 1;
+        overflow: hidden;
+        aspect-ratio: 1 / 1;
         width: 100%;
-        max-width: clamp(100px, 11vw, 160px);
 
         a {
           display: block;
+          width: 100%;
+          height: 100%;
         }
         img {
           width: 100%;
+          height: 100%;
           max-width: 160px;
           object-fit: cover;
-          border-radius: 50%;
+          object-position: center center;
         }
       }
       .artist-info {
