--- a/src/styles/SearchResult.scss
+++ b/src/styles/SearchResult.scss
@@ -82,6 +82,7 @@
         overflow: hidden;
         aspect-ratio: 1 / 1;
         width: 100%;
+        max-width: 160px;
 
         a {
           display: block;
@@ -91,7 +92,6 @@
         img {
           width: 100%;
           height: 100%;
-          max-width: 160px;
           object-fit: cover;
           object-position: center center;
         }
@@ -100,6 +100,7 @@
         display: flex;
         flex-direction: column;
         row-gap: 12px;
+        width: 100%;
         .artist-name {
           display: flex;
           justify-content: center;
