하늘 fix: 뮤블 수정사항 수정 완료

--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -713,7 +713,7 @@
   &.visible {
     padding: 8px 0px;
     opacity: 1;
-    height: calc((40.8px * 5) + 16px);
+    height: calc((47.98px * 5) + (16px * 2));
     padding: 8px 0px;
   }
   &.mobile {
