하늘 feat: 노드레퍼럴 scss 깨지는거 수정, mypage 곡재생 오류 수정 완료

--- a/src/node-referral/components/unit/Footer.scss
+++ b/src/node-referral/components/unit/Footer.scss
@@ -101,7 +101,8 @@
       @include flex-between;
       cursor: default;
       gap: 12px;
-      width: 65%;
+      // width: 65%;
+      width: 100%;
       align-items: stretch;
       .token-ui {
         @include flex-column;
