--- a/src/node-referral/styles/pages/MasterDashboard.scss
+++ b/src/node-referral/styles/pages/MasterDashboard.scss
@@ -1,6 +1,15 @@
 @import '../variables';
 @import '../mixins';
 
+.result-loading {
+  width: 100%;
+  height: 100%;
+  min-height: calc(100vh - 548px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 // MasterDashboardDoing scss START
 .masterdashboard-wrapper {
   padding: $sp-60 2%;
