--- a/public/App.css
+++ b/public/App.css
@@ -1,3 +1,5 @@
+/* 뮤블 */
+
 @font-face {
   font-family: 'Pretendard400';
   src: url('./assets/fonts/Pretendard-Regular.woff');
@@ -53,7 +55,7 @@ body {
   outline: 0;
   outline: none;
 }
-ul, ol {
+ul {
   list-style: none;
 }
 
@@ -158,10 +160,6 @@ font {
   text-transform: inherit !important;
   text-rendering: inherit !important;
   -webkit-font-smoothing: inherit !important; */
-}
-pre font{
-  all: unset;
-  font-family: 'Prentendard';
 }
 
 @media screen and (max-width: 1000px) {
