--- a/src/node-referral/NodeApp.css
+++ b/src/node-referral/NodeApp.css
@@ -35,8 +35,8 @@ input {
 }
 
 /* 리스트 스타일 제거 */
-ul[role="list"],
-ol[role="list"] {
+ul[role='list'],
+ol[role='list'] {
   list-style: none;
 }
 
@@ -101,7 +101,7 @@ html {
 }
 body {
   line-height: 1.5;
-  font-family: "Pretendard";
+  font-family: 'Pretendard';
   font-size: 16px;
   min-height: 100vh;
 }
