--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -114,88 +114,6 @@
 
 
 // artist-slider START
-// .artist-slider{
-//   width: 100%;
-//   max-width: 100%;
-//   .swiper-wrapper{
-//     transition-timing-function: linear;
-//     will-change: transform;
-//     transform: translateZ(0);
-//     }
-//   }
-//   .swiper-slide{
-//     flex-shrink: 0 !important;
-//     transition: all .3s ease;
-//     text-align: center;
-//     min-width: 130px;
-//     max-width: 160px;
-//     width: auto;
-//   }
-//   .artist-item{
-//     width: 100%;
-//     flex-shrink: 0;
-//     transition: transform 0.3s ease;
-//     display: flex;
-//     row-gap: 24px;
-//     flex-direction: column;
-//   }
-//   .artist-thumb{
-//     width: clamp(130px, 11vw, 160px);
-//     height: clamp(130px, 11vw, 160px);
-//     margin: 0 auto;
-//     border-radius: 100%;
-//     overflow: hidden;
-//     img {
-//       width: 100%;
-//       height: 100%;
-//       object-fit: cover;
-//       aspect-ratio: 1 / 1;
-//     }
-//   }
-//   .artist-info{
-//     display: flex;
-//     flex-direction: column;
-//     row-gap: 12px;
-//     .artist-name{
-//       display: flex;
-//       justify-content: center;
-//       align-items: center;
-//       column-gap: 12px;
-//       font-size: clamp(16px, 1.6vw, 24px);
-//       line-height: clamp(24px, 2.4vw, 36px);
-//       color: #fff;
-//       font-weight: 400;
-//       span{
-//         max-width: 130px;
-//         white-space: nowrap;
-//         overflow: hidden;
-//         text-overflow: ellipsis;
-//       }
-//       .artist-level{
-//         width: 100%;
-//         max-width: 20px;
-//       }
-//     }
-//     .artist-meta{
-//       display: flex;
-//       justify-content: space-around;
-//       span{
-//         color: #767676;
-//         font-size: clamp(12px, 1.2vw, 18px);
-//         line-height: clamp(18px, 1.8vw, 27px);
-//       }
-//       small{
-//         display: block;
-//         padding-top: 3px;
-//         color: #bbb;
-//         font-size: clamp(14px, 1.4vw, 21px);
-//         line-height: clamp(22px, 2.2vw, 33px);
-//       }
-//     }
-//   }
-// } 
-// artist-slider END
-
 .artist-slider-wrap{
   position: relative;
   overflow: hidden;
@@ -227,7 +145,8 @@
 
   &__container {
     display: flex;
-    gap: 30px;
+    gap: clamp(20px, 2vw, 30px);
+    transition: all linear;
   }
 
   &__slide {
@@ -239,10 +158,14 @@
 
 .artist-item {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
+  align-items: center;
 
   .artist-thumb {
-    width: clamp(130px, 11vw, 160px);
-    height: clamp(130px, 11vw, 160px);
+    width: clamp(110px, 9vw, 130px);
+    height: clamp(110px, 9vw, 130px);
     aspect-ratio: 1 / 1;
 
     img {
@@ -262,8 +185,8 @@
       justify-content: center;
       align-items: center;
       column-gap: 12px;
-      font-size: clamp(16px, 1.6vw, 24px);
-      line-height: clamp(24px, 2.4vw, 36px);
+      font-size: clamp(16px, 1.3vw, 18px);
+      line-height: clamp(22px, 1.6vw, 24px);
       color: #fff;
       font-weight: 400;
       span{
@@ -274,29 +197,28 @@
       }
       .artist-level{
         width: 100%;
-        max-width: 20px;
+        max-width: 18px;
       }
     }
     .artist-meta{
       display: flex;
       justify-content: space-around;
+      text-align: center;
       span{
         color: #767676;
-        font-size: clamp(12px, 1.2vw, 18px);
-        line-height: clamp(18px, 1.8vw, 27px);
+        font-size: clamp(12px, 1.2vw, 14px);
+        line-height: clamp(18px, 1.3vw, 20px);
       }
       small{
         display: block;
         padding-top: 3px;
         color: #bbb;
-        font-size: clamp(14px, 1.4vw, 21px);
-        line-height: clamp(22px, 2.2vw, 33px);
+        font-size: clamp(12px, 1.2vw, 14px);
+        line-height: clamp(18px, 1.3vw, 20px);
       }
     }
   }
 } 
-
-
 
 
 // album-section START
