--- a/src/styles/Nft.scss
+++ b/src/styles/Nft.scss
@@ -34,6 +34,7 @@
     text-shadow: 0px 4px 0px rgba(0, 0, 0, 0.6);
     font-family:  Pretendard400;
     font-size: 20px;
+    line-height: 26px;
     margin-bottom: 24px;
         font{
       font-family: inherit !important;
