--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -336,6 +336,7 @@
               overflow-x: auto;
               white-space: pre-wrap;
               padding: 32px;
+              font-family: 'Pretendard', sans-serif !important;
               font{
                 font-family: 'Pretendard';
                 font-size: inherit !important;
