--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,56 @@
   src: url('./assets/fonts/Pretendard-Black.woff');
 }
 
+/* font-weight 분리 코드 */
+@font-face {
+  font-family: 'Pretendard';
+  src: url('./assets/fonts/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url('./assets/fonts/Pretendard-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url('./assets/fonts/Pretendard-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url('./assets/fonts/Pretendard-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url('./assets/fonts/Pretendard-ExtraBold.woff') format('woff');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url('./assets/fonts/Pretendard-Black.woff') format('woff');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 html,
 body {
   width: 100%;
@@ -38,7 +88,7 @@ body {
   position: relative;
   font-size: 14px;
   line-height: 120%;
-  font-family: 'Pretendard';
+  font-family: 'Pretendard400', sans-serif;
 }
 #root {
   background: #121212;
@@ -95,7 +145,7 @@ textarea {
   border-radius: 12px;
   border: 1px solid #383838;
   color: #fff;
-  font-family: ' Pretendard600';
+  font-family: 'Pretendard600';
   font-size: 12px;
   font-style: normal;
   line-height: normal;
