--- a/src/components/unit/VoteItem.scss
+++ b/src/components/unit/VoteItem.scss
@@ -1,112 +1,115 @@
-.vote-item{
+.vote-item {
+  display: flex;
+  flex-direction: column;
+  row-gap: clamp(8px, 0.8vw, 12px);
+  min-width: 0;
+  &__music-cover {
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    border-radius: clamp(16px, 1.3vw, 20px) !important;
+    overflow: hidden;
+    min-width: clamp(150px, 20vw, 289px);
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  &__meta {
     display: flex;
-    flex-direction: column;
-    row-gap: clamp(8px, 0.8vw, 12px);
-    min-width: 0;
-    &__music-cover{
-        width: 100%;
-        aspect-ratio: 1 / 1;
-        border-radius: clamp(16px, 1.3vw, 20px) !important;
-        overflow: hidden;
-        min-width: clamp(150px, 20vw, 289px);
-        img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+    column-gap: 2%;
+    margin-bottom: 8px;
+    li {
+      position: relative;
+      span {
+        padding-left: 20px;
+      }
     }
-    &__meta{
-        display: flex;
-        column-gap: 2%;
-        margin-bottom: 8px;
-        li{
-            position: relative;
-            span{
-                padding-left: 20px;
-            }
-        }
-        li:before{
-            position: absolute;
-            content: '';
-            width: 16px;
-            height: 16px;
-            background-repeat: no-repeat;
-            background-size: 16px;
-            background-position: left center;
-        }
-        &__genre::before{
-            background-image: url('../../assets/images/vote/music-type-icon.svg');
-        }
-        &__play::before{
-            background-image: url('../../assets/images/vote/music-play-icon.svg');
-        }
-        &__heart::before{
-            background-image: url('../../assets/images/vote/music-heart-icon.svg');
-        }
+    li:before {
+      position: absolute;
+      content: '';
+      width: 16px;
+      height: 16px;
+      background-repeat: no-repeat;
+      background-size: 16px;
+      background-position: left center;
     }
-    &__tit{
-        font-weight: 700;
-        color: #fff;
-        font-size: clamp(14px, 1.3vw, 20px);
-        line-height: clamp(22px, 2vw, 30px);
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: block;
-        white-space: nowrap;
-        max-width: 100%;
-        margin-bottom: 8px;
+    &__type::before {
+      background-image: url('../../assets/images/vote/music-type-icon.svg');
     }
-    &__artist{
-        display: flex;
-        align-items: center;
-        column-gap: 8px;
+    &__play::before {
+      background-image: url('../../assets/images/vote/music-play-icon.svg');
+    }
+    &__like::before {
+      background-image: url('../../assets/images/vote/music-heart-icon.svg');
+    }
+  }
+  &__tit {
+    font-weight: 700;
+    color: #fff;
+    font-size: clamp(14px, 1.3vw, 20px);
+    line-height: clamp(22px, 2vw, 30px);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+    white-space: nowrap;
+    max-width: 100%;
+    margin-bottom: 8px;
+  }
+  &__artist {
+    display: flex;
+    align-items: center;
+    column-gap: 8px;
 
-        .artist-cover{
-            width: 100%;
-            max-width: clamp(22px, 2vw, 30px);
-        }
-        .artist-name{
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            color: #ababab;
-            font-weight: 400;
-            font-size: clamp(12px, 1.1vw, 16px);
-            line-height: clamp(18px, 1.6vw, 24px);
-        }
+    .artist-cover {
+      width: 100%;
+      height: auto;
+      max-width: clamp(22px, 2vw, 30px);
+      max-height: clamp(22px, 2vw, 30px);
+      object-fit: cover;
+      border-radius: 100px;
     }
-    &__vote{
-        small{
-            color: #767676;
-            font-size: clamp(12px, 0.9vw, 14px);
-            line-height: clamp(18px, 1.5vw, 22px);
-            font-weight: 400;
-        }
-        strong{
-            color: #fff;
-            font-weight: 700;
-            font-size: clamp(14px, 1.1vw, 16px);
-            line-height: clamp(22px, 1.6vw, 24px);
-            margin-left: 8px;
-        }
+    .artist-name {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      color: #ababab;
+      font-weight: 400;
+      font-size: clamp(12px, 1.1vw, 16px);
+      line-height: clamp(18px, 1.6vw, 24px);
     }
-    &__btn{
-        border-radius: clamp(8px, 0.8vw, 12px);
-        font-size: clamp(14px, 1.1vw, 16px);
-        line-height: clamp(22px, 1.6vw, 24px);
-        font-weight: 400;
-        width: 100%;
-        padding: clamp(4px, 0.5vw, 8px) 2%;
-        transition: all .2s ease;
-        &--vote{
-            color: #CF0;
-            border: 1px solid #CF0;
-        }
-        &--success{
-            color: #767676;
-            border: 1px solid rgba(204, 255, 0, 0.3);
-            pointer-events: none;
-        }
+  }
+  &__vote {
+    small {
+      color: #767676;
+      font-size: clamp(12px, 0.9vw, 14px);
+      line-height: clamp(18px, 1.5vw, 22px);
+      font-weight: 400;
     }
+    strong {
+      color: #fff;
+      font-weight: 700;
+      font-size: clamp(14px, 1.1vw, 16px);
+      line-height: clamp(22px, 1.6vw, 24px);
+      margin-left: 8px;
+    }
+  }
+  &__btn {
+    border-radius: clamp(8px, 0.8vw, 12px);
+    font-size: clamp(14px, 1.1vw, 16px);
+    line-height: clamp(22px, 1.6vw, 24px);
+    font-weight: 400;
+    width: 100%;
+    padding: clamp(4px, 0.5vw, 8px) 2%;
+    transition: all 0.2s ease;
+    &--vote {
+      color: #cf0;
+      border: 1px solid #cf0;
+    }
+    &--success {
+      color: #767676;
+      background: var(--White-05, rgba(255, 255, 255, 0.05));
+      pointer-events: none;
+    }
+  }
 }
-
