--- a/src/styles/MyPage.scss
+++ b/src/styles/MyPage.scss
@@ -8,19 +8,18 @@
   .mypage__profile {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    row-gap: clamp(16px, 2vw, 30px);
     .profile__bg {
       height: 170px;
       width: 100%;
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
+      border-radius: 20px;
     }
 
     .profile__info {
-      border: 1px solid #cf0;
       border-radius: 12px;
-      padding: 16px;
       display: flex;
       flex-direction: column;
       gap: 8px;
@@ -28,7 +27,8 @@
 
     .profile__info__cover{
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
+      row-gap: clamp(12px, 1.3vw, 20px);
       .profile__info__btns{
         display: flex;
         align-items: center;
@@ -50,9 +50,9 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          color: #FFF;
+          color: #CF0;
           font-family: Pretendard400;
-          font-size: 14px;
+          font-size: clamp(12px, 0.9vw, 14px);
         }//edit-btn--END--
       }//profile__info__btns--END--
 
@@ -64,14 +64,20 @@
     }
 
     .profile__info--profile-image {
-      width: 24px;
-      height: 24px;
+      width: 112px;
+      height: 112px;
       object-fit: cover;
       border-radius: 100%;
     }
+    .profile__info--profile-top{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
     .profile__info--name-text {
       font-family: Pretendard400;
-      font-size: 24px;
+      font-size: clamp(18px, 1.6vw, 24px);
+      line-height: clamp(28px, 2.3vw, 34px);
       font {
         font-family: inherit !important;
         font-size: inherit !important;
@@ -82,14 +88,45 @@
         letter-spacing: inherit !important;
       }
     }
+    .profile__info--count{
+      .profile__info--img-count{
+        span{
+          padding-left: 22px;
+          position: relative;
+          font-size: clamp(12px, 0.9vw, 14px);
+          line-height: clamp(18px, 1.3vw, 22px);
+        }
+        span::before{
+          position: absolute;
+          content: '';
+          width: 22px;
+          height: 22px;
+          background-repeat: no-repeat;
+          background-position: left center;
+          background-size: 22px;
+          left: 0;
+          top: -4px;
+        }
+        .total-like-count{
+          margin-left: 8px;
+        }
+        .total-play-count::before{
+          background-image: url('../assets/images/vote/music-play-icon.svg');
+        }
+        .total-like-count::before{
+          background-image: url('../assets/images/vote/music-heart-icon.svg')
+        }
+      }
+    }
     .profile__info--level {
       display: flex;
       align-items: center;
       gap: 8px;
+      font-size: clamp(12px, 0.9vw, 14px);
+      line-height: clamp(18px, 1.3vw, 22px);
     }
     .profile__info--level-text {
-      color: #cf0;
-      font-size: 12px;
+      color: #767676;
       font-family: Pretendard400;
       font {
         font-family: inherit !important;
@@ -102,12 +139,11 @@
       }
     }
     .profile__info--level-icon {
-      width: 20px;
-      height: 20px;
+      width: clamp(20px, 1.6vw, 24px);
+      height: clamp(20px, 1.6vw, 24px);
     }
     .profile__info--level-rating {
-      color: #aaa;
-      font-size: 14px;
+      color: #fff;
       font-family: Pretendard400;
       font {
         font-family: inherit !important;
@@ -598,13 +634,6 @@
       // height: 580px;
       .profile__info__btns{
         margin-bottom: 8px;
-        a{
-          flex: 1;
-        }
-      }
-      .profile__info__cover{
-        flex-direction: column;
-        gap: 12px;
       }
       .mypage__profile-bg {
         width: calc(100% + 32px);
